...
              child: SingleChildScrollView(
                scrollDirection: Axis.horizontal,
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    GestureDetector(
                      key: Key('factory1'),
                      child: Container(
                          height: 145,
                          width: 160,
                          decoration: BoxDecoration(
                              border: Border.all(color: factory1),
                              color: const Color.fromRGBO(255, 254, 255, 1),
...
                                style: TextStyle(fontSize: 20),
                              ),
                            ],
                          )),
                      onTap: () {
                        setState(() {
                          factory2 = Colors.grey;
                          factory1 = Colors.blue;
                          factory3 = Colors.grey;
                          facindex = 1;
                        });
                      },
                    ),
                    const SizedBox(
                      width: 20,
...
          ],
        ),
      ),
      bottomNavigationBar: BottomNavigationBar(
        items: const [
          BottomNavigationBarItem(
            key: Key('person'),
            label: '',
            icon: Icon(Icons.person),
          ),
          BottomNavigationBarItem(
            key: Key('home'),
            label: '',
            icon: Icon(Icons.home),
          ),
          BottomNavigationBarItem(
            key: Key('settings'),
            label: '',
            icon: Icon(Icons.settings),
          ),
        ],
        currentIndex: currentIndex,
        onTap: (int index) {
...
                  Row(
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: [
                      Padding(
                        padding: const EdgeInsets.only(right: 15, bottom: 15),
                        child: ElevatedButton(
                          key: Key('add'),
                          onPressed: () {
                            Navigator.of(context).push(
                              MaterialPageRoute(
                                builder: (context) => const Invitation(),
                              ),
                            );
...
